# data

./: .gitignore  Cargo.toml  Justfile  README.md  lychee.toml
crates/data/: Cargo.toml  README.md
crates/data-cache/: Cargo.toml  README.md
crates/data-cache/src/: lib.rs  memory.rs  noop.rs  sqlite.rs
crates/data-core/: Cargo.toml  README.md
crates/data-core/src/: cache.rs  error.rs  frequency.rs  lib.rs  provider.rs  types.rs
crates/data-edgar/: Cargo.toml  README.md
crates/data-edgar/src/: lib.rs
crates/data-fmp/: Cargo.toml  README.md
crates/data-fmp/src/: lib.rs
crates/data-ibkr/: Cargo.toml  README.md
crates/data-ibkr/src/: lib.rs
crates/data-nasdaq/: Cargo.toml  README.md
crates/data-nasdaq/src/: lib.rs
crates/data-yahoo/: Cargo.toml  README.md
crates/data-yahoo/src/: lib.rs
crates/data/src/: lib.rs  registry.rs
