[package]
name = "data-core"
description = "Core traits and types for quant data providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
polars.workspace = true
futures.workspace = true
thiserror.workspace = true
async-trait.workspace = true
