[package]
name = "data-yahoo"
description = "Yahoo Finance data provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
chrono.workspace = true
polars.workspace = true
reqwest.workspace = true
tracing.workspace = true
data-core.workspace = true
serde_json.workspace = true
async-trait.workspace = true
